--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 3,
-    "name": "Copy History",
+    "name": "finding people",
     "description": "",
     "version": "1.0",
     "action": {
